--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html">
     <title>Lunch. Do order</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/html">
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   </head>
@@ -13,7 +14,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-right">
+                <div class="col-xs-12 text-right">
                     <a href="#">User</a>
                 </div>
             </div>
@@ -22,22 +23,22 @@
     <content>
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-center">
-                    <h2>Category</h2>
+                <div class="col-xs-12 text-center">
+                    <h2>Category {{add}}</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-1 offset"></div>
-                <div class="col-md-3">
+                <div class="col-xs-1 offset"></div>
+                <div class="col-xs-3">
                     Страва
                 </div>
-                <div class="col-md-6">
+                <div class="col-xs-6">
                     Опис
                 </div>
-                <div class="col-md-1">
+                <div class="col-xs-1">
                     Вихід
                 </div>
-                <div class="col-md-1">
+                <div class="col-xs-1">
                     Ціна
                 </div>
             </div>
