--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,12 +1,12 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html">
     <title>Lunch. Do order</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/html">
+    <link type="text/css" href="{% static '../static/css/bootstrap.min.css' %}" rel="stylesheet">
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   </head>
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 text-right">
+                <div class="col-md-12 text-right">
                     <a href="#">User</a>
                 </div>
             </div>
@@ -23,24 +23,32 @@
     <content>
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 text-center">
-                    <h2>Category {{add}}</h2>
+                <div class="col-md-12 text-center">
+                    {% for category in categories %}
+                        <h2>{{ category.title }}</h2>
+
+
+
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-1 offset"></div>
-                <div class="col-xs-3">
-                    Страва
+                <div class="col-md-1 offset"></div>
+                <div class="col-md-3">
+                  {% for dish in dishes %}
+                    <h4>{{ dish.name }}</h4>
+
                 </div>
-                <div class="col-xs-6">
-                    Опис
+                <div class="col-md-6">
+                    <h4>{{ dish.description }}</h4>
                 </div>
-                <div class="col-xs-1">
-                    Вихід
+                <div class="col-md-1">
+                    <h4>{{ dish.weight }}</h4>
                 </div>
-                <div class="col-xs-1">
-                    Ціна
+                <div class="col-md-1">
+                    <h4>{{ dish.price }}</h4>
                 </div>
+                {% endfor %}
+                    {% endfor %}
             </div>
 
         </div>
