--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,59 +1,10 @@
+{% extends 'base.html' %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lunch. Do order</title>
-    <link type="text/css" href="{% static '../static/css/bootstrap.min.css' %}" rel="stylesheet">
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  </head>
-  <body>
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-right">
-                    <a href="#">User</a>
-                </div>
-            </div>
-        </div>
-    </header>
-    <content>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    {% for category in categories %}
-                        <h2>{{ category.title }}</h2>
+{% block bootstrap3_content %}
+
+{% endblock %}
 
 
-
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-1 offset"></div>
-                <div class="col-md-3">
-                  {% for dish in dishes %}
-                    <h4>{{ dish.name }}</h4>
-
-                </div>
-                <div class="col-md-6">
-                    <h4>{{ dish.description }}</h4>
-                </div>
-                <div class="col-md-1">
-                    <h4>{{ dish.weight }}</h4>
-                </div>
-                <div class="col-md-1">
-                    <h4>{{ dish.price }}</h4>
-                </div>
-                {% endfor %}
-                    {% endfor %}
-            </div>
-
-        </div>
-    </content>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+{% block bootstrap3_extra_script %}
+    <script type="text/javascript" src="{% static "scripts.js" %}"></script>
+{% endblock %}
