--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -11,6 +11,7 @@
                     {% include 'include/menu.html' %}
                 </div>
                 <div class="col-xs-9">
+                    {% include 'include/auth_user.html' %}
                     {% block user_content %}
 
                     {% endblock %}
