--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -24,5 +24,7 @@
 
 
 {% block bootstrap3_extra_script %}
+    <link href="{% static "jquery-ui.css" %}" rel="stylesheet">
     <script type="text/javascript" src="{% static "scripts.js" %}"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 {% endblock %}
