--- a/main/templates/include/menu.html
+++ b/main/templates/include/menu.html
@@ -1,5 +1,5 @@
 
 <ul>
-    <li><a href="{% url 'main.views.history' %}">Історія замовлень</a></li>
-    <li><a href="{% url 'main.views.new' %}">Нове замовлення</a></li>
+    <li><a href="{% url 'order_history' %}">Історія замовлень</a></li>
+    <li><a href="{% url 'new_order' %}">Нове замовлення</a></li>
 </ul>
