--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -7,13 +7,16 @@
     <content>
         <div class="container">
             <div class="row">
+                <div class="col-xs-12">
+                    {% include 'include/signin.html' %}
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-xs-3">
                     {% include 'include/menu.html' %}
                 </div>
                 <div class="col-xs-9">
-                    {% include 'include/auth_user.html' %}
                     {% block user_content %}
-
                     {% endblock %}
                 </div>
             </div>
