--- a/main/templates/new.html
+++ b/main/templates/new.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 {% block user_content %}
 
-<form action="/history/" method="post">
+<form action="{% url 'order_history' %}" method="post">
     {% csrf_token %}
     {% for category_title, dish_list in dishes.items %}
         <div class="row">
@@ -12,6 +12,7 @@
                     <div class="col-xs-1"></div>
                     <div class="col-xs-3">Назва</div>
                     <div class="col-xs-1">Вихід</div>
+                    <div class="col-xs-1">Кількість</div>
                     <div class="col-xs-5">Опис</div>
                     <div class="col-xs-1">Ціна (грн).</div>
                 </div>
@@ -23,6 +24,7 @@
                         </div>
                         <div class="col-xs-3">{{ dish.name }}</div>
                         <div class="col-xs-1">{{ dish.weight }}</div>
+                        <div class="col-xs-1">{{ dish.quantity }}</div>
                         <div class="col-xs-5">{{ dish.description }}</div>
                         <div class="col-xs-1">{{ dish.price }}</div>
                     </div>
@@ -30,8 +32,8 @@
             </div>
         </div>
     {% endfor %}
-    {{ form }}
-    <input type="submit" class="button" value="add_order">
+    {{ new_order }}
+    <input type="submit" class="button" value="add_order"/>
 </form>
 
 {% endblock %}
