--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layouts/base.html' %}
 {% load staticfiles %}
 {% block bootstrap3_content %}
     <div class="container">
