change home and login pages

--- a/main/templates/include/menu.html
+++ b/main/templates/include/menu.html
@@ -1,4 +1,4 @@
-<ul>
-    <li><a href="{% url 'order_history' %}">Історія замовлень</a></li>
-    <li><a href="{% url 'new_order' %}">Нове замовлення</a></li>
-</ul>
+<li><a href="{% url 'new_order' %}"class="btn btn-primary">Нове замовлення</a></li>
+<br/>
+<li><a href="{% url 'order_history' %}" class="btn btn-primary">Історія замовлень</a></li>
+<br/>
