--- a/main/templates/new.html
+++ b/main/templates/new.html
@@ -1,20 +1,38 @@
 {% extends 'layouts/main_logged_in.html' %}
-{% block user_content %}
+{% block bootstrap3_content %}
 
+<div class="container">
+    <div class="row">
+        <div class="col-xs-2 col-xs-1-offser">
+                <ul class="list-unstyled">
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    {% include 'include/menu.html' %}
+                    {% include 'include/menu_logged_in.html' %}
+                </ul>
+            </div>
+        <div class="col-xs-6 col-xs-offset-1">
+            <br/>
+            <br/>
+            <br/>
 <form action="{% url 'order_history' %}" method="post">
     {% csrf_token %}
     {% for category_title, dish_list in dishes.items %}
         <div class="row">
             <div class="col-xs-12">
                 <div class="row text-center"><h3>{{ category_title }}</h3></div>
-
+                <br/>
                 <div class="row">
                     <div class="col-xs-1"></div>
                     <div class="col-xs-3">Назва</div>
                     <div class="col-xs-1">Вихід</div>
                     <div class="col-xs-5">Опис</div>
-                    <div class="col-xs-1">Ціна (грн).</div>
+                    <div class="col-xs-2">Ціна (грн).</div>
                 </div>
+                <br/>
 
                 {% for dish in dish_list %}
                     <div class="row">
@@ -31,7 +49,9 @@
         </div>
     {% endfor %}
     {{ new_order }}
-    <input type="submit" class="button" value="add_order"/>
+    <input type="submit" class="btn btn-primary" value="Зробити замовлення"/>
 </form>
-
+    </div>
+</div>
+    </div>
 {% endblock %}
