--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -1,14 +1,42 @@
-{% extends 'main.html' %}
-{% block user_content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-2 center">
+{% extends 'layouts/main_logged_in.html' %}}
+{% block bootstrap3_content %}
+
+<div class="container">
+    <div class="row">
+        <div class="col-xs-2 col-xs-1-offser">
+                <ul class="list-unstyled">
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    {% include 'include/menu_not_logged.html' %}
+                </ul>
+            </div>
+                    <br/>
+                    <br/>
+                    <br/>
+        <div class="col-xs-8">
+        <div class="col-xs-6 col-xs-offset-3 ">
                 <form action="{% url 'register' %}" method="post">
                     {% csrf_token %}
-                    {{ user_register }}
-                    <input class="button" type="submit" value="Register">
+                    {% for field in user_register.visible_fields %}
+
+            {% if field.errors %}
+                <div class="alert alert-danger">
+                    <p>{{ field.errors }}</p>
+                </div>
+            {% endif %}
+
+            {{ field }}
+            <br/>
+        {% endfor %}
+
+                    <input class="btn btn-primary btn-block" type="submit" value="Зареєструватися">
                 </form>
-            </div>
         </div>
     </div>
+</div>
+</div>
+
 {% endblock %}
