--- a/main/templates/layouts/main_logged_in.html
+++ b/main/templates/layouts/main_logged_in.html
@@ -2,18 +2,28 @@
 {% load staticfiles %}
 {% block bootstrap3_content %}
     <div class="container">
+        <div>
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+        </div>
         <div class="row">
-            <div class="col-xs-2 col-xs-1-offser">
+            <div class="col-xs-2 col-xs-offset-1">
                 <ul class="list-unstyled">
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
                     {% include 'include/menu.html' %}
                     {% include 'include/menu_logged_in.html' %}
                 </ul>
             </div>
+
+            <div class="col-xs-8 col-xs-offset-1">
+                {% block user_content %}
+
+
+                {% endblock %}
+            </div>
+
         </div>
     </div>
 
