--- a/main/templates/layouts/main_logged_in.html
+++ b/main/templates/layouts/main_logged_in.html
@@ -3,11 +3,7 @@
 {% block bootstrap3_content %}
     <div class="container">
         <div>
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
+            {% block alerts %}{% endblock %}
         </div>
         <div class="row">
             <div class="col-xs-2 col-xs-offset-1">
