--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -3,7 +3,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-xs-2 col-xs-1-offser">
+        <div class="col-xs-2 col-xs-offset-1">
                 <ul class="list-unstyled">
                     <br/>
                     <br/>
