--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -1,9 +1,9 @@
 {% extends 'layouts/main_logged_in.html' %}}
 {% block bootstrap3_content %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-xs-2 col-xs-1-offser">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-2 col-xs-offset-1">
                 <ul class="list-unstyled">
                     <br/>
                     <br/>
@@ -13,30 +13,29 @@
                     {% include 'include/menu_not_logged.html' %}
                 </ul>
             </div>
-                    <br/>
-                    <br/>
-                    <br/>
-        <div class="col-xs-8">
-        <div class="col-xs-6 col-xs-offset-3 ">
-                <form action="{% url 'register' %}" method="post">
-                    {% csrf_token %}
-                    {% for field in user_register.visible_fields %}
-
-            {% if field.errors %}
-                <div class="alert alert-danger">
-                    <p>{{ field.errors }}</p>
-                </div>
-            {% endif %}
-
-            {{ field }}
             <br/>
-        {% endfor %}
+            <br/>
+            <br/>
 
-                    <input class="btn btn-primary btn-block" type="submit" value="Зареєструватися">
-                </form>
+            <div class="col-xs-8">
+                <div class="col-xs-6 col-xs-offset-3 ">
+                    <form action="{% url 'register' %}" method="post">
+                        {% csrf_token %}
+                        {% for field in register_form.visible_fields %}
+                            {% if field.errors %}
+                                <div class="alert alert-danger">
+                                    <p>{{ field.errors }}</p>
+                                </div>
+                            {% endif %}
+                            {{ field }}
+                            <br/>
+                        {% endfor %}
+                        <input class="btn btn-primary btn-block" type="submit" value="Зареєструватися">
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-</div>
-
 {% endblock %}
+
+
