--- a/main/templates/include/menu_logged_in.html
+++ b/main/templates/include/menu_logged_in.html
@@ -1,3 +1,8 @@
+<li><a href="{% url 'new_order' %}" class="{% if request.resolver_match.url_name == 'new_order' %}active{% endif %} btn btn-primary">Нове замовлення</a></li>
+<br/>
+<li><a href="{% url 'order_history' %}" class="{% if request.resolver_match.url_name == "order_history" %}active{% endif %} btn btn-primary">Історія замовлень</a></li>
+<br/>
+
 <li><a href="" class="btn btn-primary">Мої дані</a></li>
 <br/>
 <li><a href="{% url 'logout' %}" class="btn btn-primary">Вийти</a></li>
