--- a/main/templates/include/menu_not_logged.html
+++ b/main/templates/include/menu_not_logged.html
@@ -1,4 +1,4 @@
-<li><a href="{% url 'login' %}" class="btn btn-primary">Ввійти</a></li>
+<li><a href="{% url 'login' %}" class="{% if request.resolver_match.url_name == "login" %}active{% endif %} btn btn-primary">Ввійти</a></li>
 <br/>
-<li><a href="{% url 'register' %}" class="btn btn-primary">Зареєструватися</a></li>
-<br/>
+<li><a href="{% url 'register' %}" class="{% if request.resolver_match.url_name == "register" %}active{% endif %} btn btn-primary">Зареєструватися</a></li>
+
