--- a/main/templates/new.html
+++ b/main/templates/new.html
@@ -4,18 +4,17 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-2 col-xs-offset-1">
+
                 <ul class="list-unstyled">
                     <br/>
                     <br/>
                     <br/>
                     <br/>
                     <br/>
-                    {% include 'include/menu.html' %}
                     {% include 'include/menu_logged_in.html' %}
                 </ul>
             </div>
             <div class="col-xs-6 col-xs-offset-1">
-                <br/>
                 <br/>
                 <br/>
                 {% block alert %}
@@ -34,27 +33,28 @@
                     {% for category_title, dish_list in dishes.items %}
                         <div class="row">
                             <div class="col-xs-12">
-                                <div class="row text-center"><h3>{{ category_title }}</h3></div>
-                                <br/>
+                                <div class="row text-center">
+                                    <h3 class="well well-sm">{{ category_title }}</h3>
+                                </div>
+                                    <br/>
 
-                                <div class="row">
+
+                                <div class="row well well-sm">
                                     <div class="col-xs-1"></div>
                                     <div class="col-xs-3">Назва</div>
                                     <div class="col-xs-1">Вихід</div>
-                                    <div class="col-xs-5">Опис</div>
-                                    <div class="col-xs-2">Ціна (грн).</div>
+                                    <div class="col-xs-4 col-xs-offset-1">Опис</div>
+                                    <div class="col-xs-2">Ціна (грн)</div>
                                 </div>
-                                <br/>
-
                                 {% for dish in dish_list %}
-                                    <div class="row">
+                                    <div class="row well well-sm">
                                         <div class="col-xs-1">
                                             <input type="checkbox" name="dish_{{ dish.id }}" value="yes"/>
                                         </div>
                                         <div class="col-xs-3">{{ dish.name }}</div>
                                         <div class="col-xs-1">{{ dish.weight }}</div>
-                                        <div class="col-xs-5">{{ dish.description }}</div>
-                                        <div class="col-xs-1">{{ dish.price }}</div>
+                                        <div class="col-xs-4 col-xs-offset-1">{{ dish.description }}</div>
+                                        <div class="col-xs-2 text-center">{{ dish.price }}</div>
                                     </div>
                                 {% endfor %}
                             </div>
