--- a/main/templates/new.html
+++ b/main/templates/new.html
@@ -35,7 +35,8 @@
                                 <div class="row text-center">
                                     <h3 class="well well-sm">{{ category_title }}</h3>
                                 </div>
-                                    <br/>
+                                <br/>
+
                                 <div class="row well well-sm">
                                     <div class="col-xs-1"></div>
                                     <div class="col-xs-3">Назва</div>
@@ -46,13 +47,18 @@
                                 {% for dish in dish_list %}
                                     <div class="row well well-sm">
                                         <div class="col-xs-1">
-                                            <input id='check_{{ dish.id }}' type="checkbox" name="dish_{{ dish.id }}" value="yes"/>
+                                            <input id='check_{{ dish.id }}' type="checkbox" name="dish_{{ dish.id }}"
+                                                   value="yes"/>
                                         </div>
-                                        <div class="col-xs-3"><label for="check_{{ dish.id }}">{{ dish.name }}</label></div>
-                                        <div class="col-xs-1"><label for="check_{{ dish.id }}">{{ dish.weight }}</label></div>
-                                        <div class="col-xs-4 col-xs-offset-1"><label for="check_{{ dish.id }}">{{ dish.description }}</label></div>
-                                        <div class="col-xs-2 text-center"><label for="check_{{ dish.id }}">{{ dish.price }}</label></div>
+                                        <div class="col-xs-3"><label for="check_{{ dish.id }}">{{ dish.name }}</label>
                                         </div>
+                                        <div class="col-xs-1"><label for="check_{{ dish.id }}">{{ dish.weight }}</label>
+                                        </div>
+                                        <div class="col-xs-4 col-xs-offset-1"><label
+                                                for="check_{{ dish.id }}">{{ dish.description }}</label></div>
+                                        <div class="col-xs-2 text-center"><label
+                                                for="check_{{ dish.id }}">{{ dish.price }}</label></div>
+                                    </div>
                                 {% endfor %}
                             </div>
                         </div>
@@ -61,9 +67,12 @@
                     <br/>
                     <br/>
                     <br/>
+
+
                     {{ new_order }}
                     <input type="hidden" id="id_user" name="user" value="{{ user.id }}">
                     <input type="submit" class="btn btn-primary" value="Зробити замовлення"/>
+
                 </form>
             </div>
         </div>
