--- a/main/templates/new.html
+++ b/main/templates/new.html
@@ -16,11 +16,6 @@
             <div class="col-xs-6 col-xs-offset-1">
                 <br/>
                 <br/>
-                {% if db_alert %}
-                    <div class="alert alert-info text-center">
-                        {{ db_alert }}
-                    </div>
-                {% endif %}
                 {% block alert %}
                     {% if alert_success %}
                         <div class="alert alert-success text-center">
@@ -32,58 +27,62 @@
                         </div>
                     {% endif %}
                 {% endblock %}
-                <form action="{% url 'new_order' %}" method="post">
-                    {% csrf_token %}
-{#                    {% for category_title, dish_list in dishes.items %}#}
-{#                        <div class="row">#}
-{#                            <div class="col-xs-12">#}
-{#                                <div class="row text-center">#}
-{#                                    <h3 class="well well-sm">{{ category_title }}</h3>#}
-{#                                </div>#}
-                                <br/>
-                                <div class="row well well-sm">
-                                    <div class="col-xs-1"></div>
-                                    <div class="col-xs-3">Назва</div>
-                                    <div class="col-xs-1">Вихід</div>
-                                    <div class="col-xs-4 col-xs-offset-1">Опис</div>
-                                    <div class="col-xs-2">Ціна (грн)</div>
-                                </div>
-                                {% for dish in dishes %}
-                                    <div class="row well well-sm">
-                                        <div class="col-xs-1">
-                                            <input id='check_{{ dish.id }}' type="checkbox" name="dish_{{ dish.id }}"
-                                                   value="yes"/>
-                                        </div>
-                                        <div class="col-xs-3"><label for="check_{{ dish.id }}">{{ dish.name }}</label>
-                                        </div>
-                                        <div class="col-xs-1"><label for="check_{{ dish.id }}">{{ dish.weight }}</label>
-                                        </div>
-                                        <div class="col-xs-4 col-xs-offset-1"><label
-                                                for="check_{{ dish.id }}">{{ dish.description }}</label></div>
-                                        <div class="col-xs-2 text-center"><label
-                                                for="check_{{ dish.id }}">{{ dish.price }}</label></div>
+                    <form action="{% url 'new_order' %}" method="post">
+                        {% csrf_token %}
+                        {% for category, dishes in categories.items %}
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <div class="row text-center">
+                                        <h3 class="well well-sm">{{ category }}</h3>
                                     </div>
-                                {% endfor %}
-{#                            </div>#}
-{#                        </div>#}
-{#                    {% endfor %}#}
-{#                    <br/>#}
-{#                    <br/>#}
-{#                    <br/>#}
-{#                    <br/>#}
-                    {% if available_dates_alert %}
-                        <div class="row">
-                            <div class="col-xs-12 alert alert-info text-center">
-                                {{ available_dates_alert }}
+                                    <br/>
+
+                                    <div class="row well well-sm">
+                                        <div class="col-xs-1"></div>
+                                        <div class="col-xs-3">Назва</div>
+                                        <div class="col-xs-1">Вихід</div>
+                                        <div class="col-xs-4 col-xs-offset-1">Опис</div>
+                                        <div class="col-xs-2">Ціна (грн)</div>
+                                    </div>
+                                    {% for dish in dishes %}
+                                        <div class="row well well-sm">
+                                            <div class="col-xs-1">
+                                                <input id='check_{{ dish.id }}' type="checkbox"
+                                                       name="dish_{{ dish.id }}"
+                                                       value="yes"/>
+                                            </div>
+                                            <div class="col-xs-3"><label
+                                                    for="check_{{ dish.id }}">{{ dish.name }}</label>
+                                            </div>
+                                            <div class="col-xs-1"><label
+                                                    for="check_{{ dish.id }}">{{ dish.weight }}</label>
+                                            </div>
+                                            <div class="col-xs-4 col-xs-offset-1"><label
+                                                    for="check_{{ dish.id }}">{{ dish.description }}</label></div>
+                                            <div class="col-xs-2 text-center"><label
+                                                    for="check_{{ dish.id }}">{{ dish.price }}</label></div>
+                                        </div>
+                                    {% endfor %}
+                                </div>
                             </div>
-                        </div>
-                    {% endif %}
+                        {% endfor %}
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                        {% if available_dates_alert %}
+                            <div class="row">
+                                <div class="col-xs-12 alert alert-info text-center">
+                                    {{ available_dates_alert }}
+                                </div>
+                            </div>
+                        {% endif %}
 
-                    {{ new_order }}
-                    <input type="hidden" id="id_user" name="user" value="{{ user.id }}">
-                    <input type="submit" class="btn btn-primary" value="Зробити замовлення"/>
+                        {{ new_order }}
+                        <input type="hidden" id="id_user" name="user" value="{{ user.id }}">
+                        <input type="submit" class="btn btn-primary" value="Зробити замовлення"/>
 
-                </form>
+                    </form>
             </div>
         </div>
     </div>
