--- a/lunch/static/jquery-ui.css
+++ b/lunch/static/jquery-ui.css
@@ -1071,7 +1071,7 @@ body .ui-tooltip {
     color: #363636;
 }
 
-.ui-state-error,
+.ui-state-zz,
 .ui-widget-content .ui-state-error,
 .ui-widget-header .ui-state-error {
     border: 1px solid #cd0a0a;
