--- a/main/templates/new.html
+++ b/main/templates/new.html
@@ -39,11 +39,11 @@
 
                                 <div class="row well well-sm">
                                     <div class="col-xs-1"></div>
-                                    <div class="col-xs-3">Назва</div>
+                                    <div class="col-xs-2">Назва</div>
                                     <div class="col-xs-1">Вихід</div>
-                                    <div class="col-xs-1">Кількість</div>
-                                    <div class="col-xs-3 col-xs-offset-1">Опис</div>
-                                    <div class="col-xs-1">Ціна (грн)</div>
+                                    <div class="col-xs-2">Кількість</div>
+                                    <div class="col-xs-4 text-center">Опис</div>
+                                    <div class="col-xs-2">Ціна (грн)</div>
                                 </div>
                                 {% for dish in dishes %}
                                     <div class="row well well-sm">
@@ -52,20 +52,16 @@
                                                    name="dish_{{ dish.id }}"
                                                    value="yes"/>
                                         </div>
-                                        <div class="col-xs-3"><label
+                                        <div class="col-xs-2"><label
                                                 for="check_{{ dish.id }}">{{ dish.name }}</label>
                                         </div>
-                                        <div class="col-xs-1"><label
-                                                for="check_{{ dish.id }}">{{ dish.weight }}</label>
+                                        <div class="col-xs-1">{{ dish.weight }}
                                         </div>
-{#                                        <div>#}
-{#                                            <input id="spinner" name="value">#}
-{#                                        </div>#}
-
-                                        <div class="col-xs-3 col-xs-offset-1"><label
-                                                for="check_{{ dish.id }}">{{ dish.description }}</label></div>
-                                        <div class="col-xs-2 text-center"><label
-                                                for="check_{{ dish.id }}">{{ dish.price }}</label></div>
+                                        <div class="col-xs-2">
+                                            <input name="count_{{ dish.id }}" type="number" min="0" max="10" value="{{ count }}" style="width: 45px;">
+                                        </div>
+                                        <div class="col-xs-4">{{ dish.description }}</div>
+                                        <div class="col-xs-2 text-center">{{ dish.price }}</div>
                                     </div>
                                 {% endfor %}
                             </div>
